--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Press The Start Button to Start</h1>
+  <button id="start-btn">Start</button>
   <div class="container">
     <div lass="row">
 
